--- a/harborscripts/.env.local.dist
+++ b/harborscripts/.env.local.dist
@@ -1,1 +1,5 @@
 #SDEBUG=1
+PORTUS_TOKEN=user:foobart
+PORTUS_URL=https://registry.foo.bar
+HARBOR_URL=https://registry2.foo.bar
+HARBOR_COOKIE=_gorilla_csrf=xxx-yyy; sid=zzz
