--- a/roles/harbor/configure/tasks/main.yml
+++ b/roles/harbor/configure/tasks/main.yml
@@ -3,7 +3,11 @@
   tags: [harbor_layout]
 - include_role: {name: harbor/download_installer}
   tags: [harbor_download_installer]
+- include_role: {name: harbor/migrate}
+  tags: [harbor_migrate]
+  when: [harbor_migrate]
 - include_role: {name: harbor/prepare}
   tags: [harbor_prepare]
+  when: [harbor_prepare]
 - include_role: {name: harbor/configs}
   tags: [harbor_configs]
