--- a/setup/harbor.yml
+++ b/setup/harbor.yml
@@ -52,6 +52,7 @@ data_volume: {{harbor_data_volume}}
 #   # ca_bundle is the path to the custom root ca certificate, which will be injected into the truststore
 #   # of registry's and chart repository's containers.  This is usually needed when the user hosts a internal storage with self signed certificate.
 #   ca_bundle:
+{{ harbor_storage_conf}}
 
 #   # storage backend, default is filesystem, options include filesystem, azure, gcs, s3, swift and oss
 #   # for more info about this configuration please refer https://docs.docker.com/registry/configuration/
@@ -133,7 +134,7 @@ log:
   #   port: 5140
 
 #This attribute is for migrator to detect the version of the .cfg file, DO NOT MODIFY!
-_version: {{harbor_pre_version}}
+_version: {{harbor_cfg_version}}
 
 # Uncomment external_database if using external database.
 # external_database:
@@ -203,3 +204,33 @@ proxy:
 #   enabled: false
 #   port: 9090
 #   path: /metrics
+
+# Trace related config
+# only can enable one trace provider(jaeger or otel) at the same time,
+# and when using jaeger as provider, can only enable it with agent mode or collector mode.
+# if using jaeger collector mode, uncomment endpoint and uncomment username, password if needed
+# if using jaeger agetn mode uncomment agent_host and agent_port
+# trace:
+#   enabled: true
+#   # set sample_rate to 1 if you wanna sampling 100% of trace data; set 0.5 if you wanna sampling 50% of trace data, and so forth
+#   sample_rate: 1
+#   # # namespace used to differenciate different harbor services
+#   # namespace:
+#   # # attributes is a key value dict contains user defined attributes used to initialize trace provider
+#   # attributes:
+#   #   application: harbor
+#   # # jaeger should be 1.26 or newer.
+#   # jaeger:
+#   #   endpoint: http://hostname:14268/api/traces
+#   #   username:
+#   #   password:
+#   #   agent_host: hostname
+#   #   # export trace data by jaeger.thrift in compact mode
+#   #   agent_port: 6831
+#   # otel:
+#   #   endpoint: hostname:4318
+#   #   url_path: /v1/traces
+#   #   compression: false
+#   #   insecure: true
+#   #   timeout: 10s
+
